H3CIPMSJAVA-20180830/src/objects/CSC_FST_Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>DESCRIPTION__c</fullName>
        <label>DESCRIPTION</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NEW_SECTION__c</fullName>
        <label>NEW SECTION</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RESOLUTION__c</fullName>
        <label>RESOLUTION</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SCOPE__c</fullName>
        <label>SCOPE</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>CSC &amp; FST Knowledge</label>
</CustomObject>